--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.10.0
 blinker==1.4
 colorama==0.4.4
 commonmark==0.9.1
@@ -5,15 +6,19 @@ docutils==0.18.1
 feedgenerator==2.0.0
 importlib-metadata==4.11.1
 Jinja2==3.0.3
+lxml==4.7.1
 Markdown==3.3.6
 MarkupSafe==2.0.1
 pelican==4.7.2
+pelican-image-process==2.1.3
+Pillow==8.4.0
 Pygments==2.11.2
 python-dateutil==2.8.2
 pytz==2021.3
 rich==11.2.0
 six==1.16.0
 smartypants==2.0.1
+soupsieve==2.3.1
 typing-extensions==4.1.1
 typogrify==2.0.7
 Unidecode==1.3.2
