--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ beautifulsoup4==4.10.0
 blinker==1.4
 colorama==0.4.4
 commonmark==0.9.1
+cssmin==0.2.0
+cyclic==1.0.0
 docutils==0.18.1
 feedgenerator==2.0.0
 importlib-metadata==4.11.1
@@ -9,12 +11,15 @@ Jinja2==3.0.3
 lxml==4.7.1
 Markdown==3.3.6
 MarkupSafe==2.0.1
+mdx-include==1.4.2
 pelican==4.7.2
 pelican-image-process==2.1.3
+pelican-webassets==2.0.0
 Pillow==8.4.0
 Pygments==2.11.2
 python-dateutil==2.8.2
 pytz==2021.3
+rcslice==1.1.0
 rich==11.2.0
 six==1.16.0
 smartypants==2.0.1
@@ -22,4 +27,5 @@ soupsieve==2.3.1
 typing-extensions==4.1.1
 typogrify==2.0.7
 Unidecode==1.3.2
+webassets==2.0
 zipp==3.7.0
